--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation "androidx.room:room-runtime:2.2.3"
     kapt "androidx.room:room-compiler:2.2.3"
     implementation "androidx.room:room-ktx:2.2.3"
+    implementation 'com.google.code.gson:gson:2.8.6'
     // Test helpers
     testImplementation "androidx.room:room-testing:2.2.3"
     // Lifecycle components
@@ -46,6 +47,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     // ViewModel Kotlin support
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03"
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     // Testing
