--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,21 +35,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.constraintlayout:constraintlayout:2.0.0-beta4"
-    implementation "androidx.room:room-runtime:2.2.3"
-    kapt "androidx.room:room-compiler:2.2.3"
-    implementation "androidx.room:room-ktx:2.2.3"
     implementation 'com.google.code.gson:gson:2.8.6'
-    // Test helpers
-    testImplementation "androidx.room:room-testing:2.2.3"
     // Lifecycle components
     implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
     kapt "androidx.lifecycle:lifecycle-compiler:2.2.0-rc03"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     // ViewModel Kotlin support
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03"
     // Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2"
     // Testing
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 }
