--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
 }
 
 allOpen {
-    annotation("me.manulorenzo.citymaps.Mockable")
+    annotation("me.manulorenzo.citymaps.city.data.source.Mockable")
 }
 
 dependencies {
