--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "me.manulorenzo.citymaps"
+        applicationId "me.manulorenzo.mapthecity"
         minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
@@ -35,7 +35,7 @@ android {
 }
 
 allOpen {
-    annotation("me.manulorenzo.citymaps.data.source.Mockable")
+    annotation("me.manulorenzo.mapthecity.data.source.Mockable")
 }
 
 dependencies {
