--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,16 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        File localProperties = project.rootProject.file('local.properties')
+        if (localProperties.exists()) {
+            properties.load(localProperties.newDataInputStream())
+        }
+
+        def apikey = properties.getProperty('gmaps.v2.apikey')
+        // Add your Google Maps v2 API key in local.properties as gmaps.v2.apikey=...
+        manifestPlaceholders = [ gmapsV2ApiKey:apikey ]
     }
     testOptions {
         unitTests.returnDefaultValues = true
