--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="${gmapsV2ApiKey}" />
 
         <activity
             android:name="me.manulorenzo.mapthecity.city.CityListActivity"
