--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,4 +80,5 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0-alpha03'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
 }
