--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -15,6 +15,8 @@ jobs:
         java-version: 1.8
     - name: Build with Gradle
       run: ./gradlew build
+    - name: run unit tests
+      run: ./gradlew testDebugUnitTest
     - name: run instrumented tests
       uses: reactivecircus/android-emulator-runner@v2
       with:
