--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -13,6 +13,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Create local.properties
+      run: echo "gmaps.v2.apikey=" > local.properties
     - name: Build with Gradle
       run: ./gradlew build
     - name: run unit tests
